<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParentPadded"
    tools:context=".login.ui.LoginActivity">

    <TextView
        android:id="@+id/switchTheme"
        style="@style/WrapContentLayout"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/welcome"
        android:textSize="@dimen/text_extra_large"
        app:layout_constraintBottom_toTopOf="@+id/usernameWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/WrapContentLayout"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/welcome_message"
        app:layout_constraintBottom_toTopOf="@+id/usernameWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTheme"
        app:layout_constraintVertical_bias="0.072" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameWrapper"
        style="@style/SectionLayout"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintBottom_toTopOf="@id/passwordWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUsername"
            style="@style/SectionLayout"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordWrapper"
        style="@style/SectionLayout"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            style="@style/SectionLayout"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/SectionLayout"
        android:layout_marginTop="@dimen/spacing_large"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordWrapper" />

</androidx.constraintlayout.widget.ConstraintLayout>